--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -80,7 +80,15 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+      <resource>
+        <directory>../frontend/dist/</directory>
+        <targetPath>static</targetPath>
+      </resource>
+    </resources>
 	</build>
-
 
 </project>
