--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -71,6 +71,11 @@
       <artifactId>zt-exec</artifactId>
       <version>1.9</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>22.0</version>
+    </dependency>
   </dependencies>
 
 	<build>
